--- a/style.css
+++ b/style.css
@@ -16,10 +16,36 @@
   padding: 1rem;
 }
 
-input {
-  border: 1px solid black;
+.input {
+  background-color: hsl(189, 41%, 97%);
+  border-radius: 5px;
+  text-align: right;
+  width: 100%;
+  color: hsl(183, 100%, 15%)
 }
+
+.input:focus {
+  border: 2px solid hsl(172, 67%, 45%)
+}
+
 
 .btn {
   background-color:hsl(186, 14%, 43%)
+}
+
+.section-title {
+  font-size: 0.75rem;
+  color: hsl(186, 14%, 43%);
+}
+
+.bill-amount {
+  background: hsl(189, 41%, 97%) url('./images/icon-dollar.svg') no-repeat left;
+}
+
+.people-amount {
+  background: hsl(189, 41%, 97%) url('./images/icon-person.svg') no-repeat left;
+}
+
+.click {
+  cursor: pointer;
 }
