--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,5 @@
 /***
-    The new CSS reset - version 1.7.3 (last updated 7.8.2022)
+    The new CSS reset - version 1.8.3 (last updated 21.1.2023)
     GitHub page: https://github.com/elad2412/the-new-css-reset
 ***/
 
@@ -31,7 +31,8 @@ ol, ul, menu {
 
 /* For images to not be able to exceed their container */
 img {
-  max-width: 100%;
+  max-inline-size: 100%;
+  max-block-size: 100%;
 }
 
 /* removes spacing between cells in tables */
@@ -55,9 +56,19 @@ meter {
   appearance: revert;
 }
 
+/* preformatted text - use only for this feature */
+pre {
+  all: revert;
+}
+
 /* reset default text opacity of input placeholder */
 ::placeholder {
   color: unset;
+}
+
+/* remove default dot (•) sign */
+::marker {
+  content: initial;
 }
 
 /* fix the feature of 'hidden' attribute.
@@ -80,4 +91,9 @@ meter {
 /* apply back the draggable feature - exist only in Chromium and Safari */
 :where([draggable="true"]) {
   -webkit-user-drag: element;
+}
+
+/* Revert Modal native behavior */
+:where(dialog:modal) {
+  all: revert;
 }
